# trib

./: CMakeLists.txt  Journal.ipynb  README.md
include/: domain.hpp  execution.hpp  moes.hpp  relaxation.hpp  results.hpp  tolerance.hpp  tribosolver.hpp  utility.hpp
src/: domain.cpp  execution.cpp  internal_domain.cpp  main.cpp  moes.cpp  relaxation.cpp  tolerance.cpp  utility.cpp
src/include/: internal_domain.hpp  level.hpp
src/include/internal/: domain.hpp  level.hpp
